--- a/bokeh/server/_templates/_base.html
+++ b/bokeh/server/_templates/_base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}{% endblock %}</title>
     {# TODO: Remove this in favor of bundling inside bokeh.css #}
     <link href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='custom.css') }}" rel="stylesheet">
     {% block head %}
     {% endblock %}
   </head>
